# IntelligentThermalPacer

./: .gitignore  CLAUDE.md  Guía de Documentación LLM-Friendly.md  IntelligentThermalPacer_Rev.4.0.md  README.md  llms-full.txt  llms.txt  pyproject.toml
tests/: test_thermal_pacer.py
thermal_pacer/: __init__.py  __main__.py  calibration.py  client.py  daemon.py
thermal_pacer/templates/: thermal_pacer.service  thermal_pacer.socket
